gluecodium/src/test/resources/smoke/errors/output/lime/smoke/Errors.lime
package smoke
class Errors {
    enum InternalErrorCode {
        ERROR_NONE,
        ERROR_FATAL
    }
    enum ExternalErrors {
        external {
            cpp include "foo/Bar.h"
            cpp name "::fire::SomeEnum"
        }
        NONE,
        BOOM,
        BUST
    }
    exception Internal(InternalErrorCode)
    exception External(ExternalErrors)
    static fun methodWithErrors() throws Internal
    static fun methodWithExternalErrors() throws External
    static fun methodWithErrorsAndReturnValue(): String throws Internal
    static fun methodWithPayloadError() throws WithPayload
    static fun methodWithPayloadErrorAndReturnValue(): String throws WithPayload
}
